testdata/baselines/reference/submodule/conformance/jsDeclarationsCrossfileMerge.errors.txt
index.js(4,16): error TS2339: Property 'memberName' does not exist on type '() => void'.


==== index.js (1 errors) ====
    const m = require("./exporter");
    
    module.exports = m.default;
    module.exports.memberName = "thing";
                   ~~~~~~~~~~
!!! error TS2339: Property 'memberName' does not exist on type '() => void'.
    
==== exporter.js (0 errors) ====
    function validate() {}
    
    export default validate;
    